--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,10 +40,10 @@ body {
     footer div {
       box-sizing: border-box;
       display: block;
-      width: 100%*(1/2);
+      width: 100%*(1/3);
       margin-bottom: 4ex;
-      margin-left: 100%*(1/4);
-      margin-right:100%*(1/4);
+      margin-left: 100%*(1/3);
+      margin-right:100%*(1/3);
       button {
         box-sizing: border-box;
         width: 100%;
@@ -92,14 +92,13 @@ body {
       margin-left: 100%*(3/8);
       margin-right:100%*(3/8);
       button {
-        padding: 1.5ex 1.5ex;
-        font-size: 1em;
+        padding: 1.25ex 1.25ex;
+        font-size: 0.8em;
       }
     }
   }//.container
 }//body
 } //tablet view
-
 
 @media (min-width: 60em) { //desktop view
 body {
@@ -125,6 +124,10 @@ body {
       margin-bottom: 8ex;
       margin-left: 100%*(3/8);
       margin-right:100%*(3/8);
+      button {
+        padding: 1.25ex 1.25ex;
+        font-size: 1em;
+      }
     }
   }//.container
 }//body
